syntax = "proto3";
package ncs.game.server.v1;
option go_package = "backend/app/game/server/api/grpc/v1";

import "google/api/annotations.proto";
import "app/game/a2s/api/grpc/v1/a2s.proto";

// Base

message Info {
    int32 server_id = 1;
    int32 mod_id = 2;
    int32 game_id = 3;
    string rcon = 4;
    string hostname = 5;
    string address = 6;
    string short_name = 7;
    // a2s
    ncs.game.a2s.v1.A2SInfo a2s_info = 8;
    repeated ncs.game.a2s.v1.A2SPlayer a2s_player = 9;
}

// Message

message InitReq {
    string address = 1;
    int32 port = 2;
}

message InitResp {
    Info info = 1;
}

message InfoReq {
    int32 server_id = 1;
}

message InfoResp {
    Info info = 1;
}

message AllInfoReq {
    bool a2s = 1;
}

message AllInfoResp {
    repeated Info info = 1;
}

message RconReq {
    int32 server_id = 1;
    string cmd = 2;
}

message RconResp {
    string response = 1;
}

message RconAllReq {
    string cmd = 1;
}

message RconAllResp {
    int32 success = 1;
}

message ChangeMapNotifyReq {
    int32 server_id = 1;
    string map = 2;
    string server_name = 3;
}

message ChangeMapNotifyResp {
}


service Server {
    rpc Info (InfoReq) returns (InfoResp) {
        option (google.api.http) = {
            get: "/game/server/info/{server_id}"
        };
    }
    rpc AllInfo (AllInfoReq) returns (AllInfoResp) {
        option (google.api.http) = {
            get: "/game/server/allinfo"
        };
    }
    rpc Init (InitReq) returns (InitResp) {
        option (google.api.http) = {
            post: "/game/server/init"
            body: "*"
        };
    }
    rpc Rcon (RconReq) returns (RconResp) {
        option (google.api.http) = {
            post: "/game/server/rcon"
            body: "*"
        };
    }
    rpc RconAll (RconAllReq) returns (RconAllResp) {
        option (google.api.http) = {
            post: "/game/server/rcon/all"
            body: "*"
        };
    }
    rpc ChangeMapNotify (ChangeMapNotifyReq) returns (ChangeMapNotifyResp) {
        option (google.api.http) = {
            post: "/game/server/changemap"
            body: "*"
        };
    }
}
